# trunc

./: AGENTS.md  Cargo.toml  README.md  TODO.md  VISION.md
.github/workflows/: ci.yml  release.yml
docs/: SKILL.md  generate-demo.sh  index.html
src/: main.rs
tests/: e2e.rs  informative_markers.rs
